# doc-introspect

./: README.md  pyproject.toml
doctags/: __init__.py  cellcache.py
nb_introspect/: __init__.py  cellcache.py
notebooks/: examples.ipynb
