[project]
name = "doctags"
version = "0.3.0"
dependencies = [
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
